--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,28 @@
 {
     "name": "mandelbrot_be",
     "image": "mcr.microsoft.com/devcontainers/python:3.12",
-    "extensions": [
-        "ms-python.python",
-        "github.copilot"
+    "postCreateCommand": "pip install fastapi uvicorn numpy black",
+    "postStartCommand": "uvicorn main:app --reload --port 5000",
+    "forwardPorts": [
+        5000
     ],
-    "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash",
-        "python.pythonPath": "/usr/local/bin/python"
-    },
-    "postCreateCommand": "python -m venv .venv && pip install -r requirements.txt"
-
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "ms-python.python",
+                "github.copilot",
+                "ms-python.vscode-pylance",
+                "ms-python.black-formatter"
+            ],
+            "settings": {
+                "terminal.integrated.shell.linux": "/bin/bash",
+                "python.linting.enabled": true,
+                "python.linting.pylintEnabled": false,
+                "python.linting.blackEnabled": true,
+                "python.formatting.provider": "black",
+                "editor.tabSize": 4,
+                "editor.formatOnSave": true
+            }
+        }
+    }
 }
