--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "mandelbrot_be",
     "image": "mcr.microsoft.com/devcontainers/python:3.12",
-    "postCreateCommand": "pip install fastapi uvicorn numpy black",
+    "postCreateCommand": "pip install fastapi uvicorn numpy black pillow",
     "postStartCommand": "uvicorn main:app --reload --port 5000 --log-level debug",
     "forwardPorts": [
         5000
